--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "next": "canary",
+    "node-sql-parser": "^5.3.13",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
